# glvs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
app/: Cargo.toml
app/src/: main.rs
doc/: architecture.md
emu/: Cargo.toml
emu/src/: bus.rs  cartridge.rs  cpu.rs  lib.rs  ppu.rs  util.rs
emu/src/cpu/: addressing.rs  instructions.rs  tests.rs
emu/src/ppu/: registers.rs  video.rs
emu/tests/: integration.rs
glvs/: Cargo.toml
glvs-core/: Cargo.toml
glvs-core/src/: bus.rs  cartridge.rs  cpu.rs  lib.rs  ppu.rs  util.rs
glvs-core/src/cpu/: instructions.rs  tests.rs
glvs-core/src/ppu/: registers.rs  video.rs
glvs-core/tests/: integration.rs
glvs/src/: main.rs
src/: bus.rs  cartridge.rs  cpu.rs  lib.rs
src/cpu/: addressing.rs  instructions.rs  status.rs  tests.rs
tests/: cpu.rs  cpu_programs.rs  integration.rs
xtask/: Cargo.toml
