[workspace]
resolver = "3"
members = [
    "glvs",
    "glvs-core"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
non-ascii-idents = "warn"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

use-self = "warn"
redundant-pub-crate = "warn"
needless-pass-by-ref-mut = "warn"

# clippy::pedantic allows
if-not-else = "allow"
many-single-char-names = "allow"
missing-panics-doc = "allow"
too-many-lines = "allow"

# clippy::restriction allows
absolute-paths = "allow"
allow-attributes-without-reason = "allow"
arbitrary-source-item-ordering = "allow"
arithmetic-side-effects = "allow"
as-conversions = "allow"
blanket-clippy-restriction-lints = "allow"
default-numeric-fallback = "allow"
else-if-without-else = "allow"
exhaustive-structs = "allow"
expect-used = "allow"
impl-trait-in-params = "allow"
implicit-return = "allow"
indexing-slicing = "allow"
integer-division = "allow"
integer-division-remainder-used = "allow"
little-endian-bytes = "allow"
min-ident-chars = "allow"
missing-assert-message = "allow"
missing-docs-in-private-items = "allow"
missing-inline-in-public-items = "allow"
missing-trait-methods = "allow"
multiple-unsafe-ops-per-block = "allow"
panic-in-result-fn = "allow"
pattern-type-mismatch = "allow"
precedence-bits = "allow"
print-stderr = "allow"
print-stdout = "allow"
pub-use = "allow"
question-mark-used = "allow"
self-named-module-files = "allow"
separated-literal-suffix = "allow"
shadow-reuse = "allow"
should-panic-without-expect = "allow"
single-call-fn = "allow"
std-instead-of-alloc = "allow"
std-instead-of-core = "allow"
struct-excessive-bools = "allow"
tests-outside-test-module = "allow"
unimplemented = "allow"
unreachable = "allow"
unwrap-in-result = "allow"
wildcard-enum-match-arm = "allow"

[profile.test]
opt-level = 1
