[workspace]
resolver = "3"
members = ["glvs", "glvs-core", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/averms/glvs"

[workspace.lints.rust]
non-ascii-idents = "warn"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# good lints from clippy::nursery
use-self = "warn"
redundant-pub-crate = "warn"
needless-pass-by-ref-mut = "warn"

# bad lints from clippy::pedantic
if-not-else = "allow"
many-single-char-names = "allow"
missing-panics-doc = "allow"
too-many-lines = "allow"

[profile.test]
opt-level = 1

[profile.release]
codegen-units = 1
strip = "symbols"
